@@ -1,1 +1,1 @@
-10.4.0-rc3
+10.4.0
