@@ -1,3 +1,7 @@
+2012-05-02  Asterisk Development Team <asteriskteam@digium.com>
+
+	* Asterisk 10.4.0 Released.
+
 2012-05-01  Asterisk Development Team <asteriskteam@digium.com>
 
 	* Asterisk 10.4.0-rc3 Released.
